[package]
name = "connect4"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy = { version = "0.9.1", features = [ "dynamic" ] }
serde = "1.0.152"
serde_json = "1.0.91"

[profile.dev]
opt-level = 1

[profile.dev.package."*"]
opt-level = 3
